# canonical-meld

./: .gitignore  README.md  demo.sh  pyproject.toml  requirements.txt
configs/: contacts_min.json  recruiter_view.json
outputs/: contacts_min_output.json  default_output.json  recruiter_view_output.json
samples/: ats.json  broken_ats.json  github_priya.json  manifest.json  manifest_robust.json  notes_priya.txt  recruiter.csv  resume_priya.txt  samename_ats.json  samename_manifest.json  samename_notes.txt  samename_recruiter.csv  samename_resume.txt
src/transformer/: __init__.py  cli.py  confidence.py  config.py  merge.py  models.py  pipeline.py  projection.py  validation.py
src/transformer/normalize/: __init__.py  country.py  dates.py  phone.py  skills.py  text.py
src/transformer/sources/: __init__.py  ats_json.py  base.py  github.py  recruiter_csv.py  recruiter_notes.py  resume_text.py
tests/: test_merge.py  test_normalize.py  test_pipeline_e2e.py  test_projection.py  test_robustness.py  test_validation.py
