[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-data-transformer"
version = "0.1.0"
description = "Merge overlapping multi-source records into one canonical, validated profile with provenance, confidence, and configurable output."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "phonenumbers>=8.13",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
dev = ["pytest>=7.0"]

[project.scripts]
transformer = "transformer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
